--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,34 @@
   position: relative;
   font-size: 1.5rem;
 }
+
+.key-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.button {
+  cursor: pointer;
+  height: 56px;
+  background-color: #fff;
+  border: 1px solid #8d99ae;
+  font-size: 1rem;
+  color: #000;
+}
+
+button:hover {
+  background-color: #eaeaea;
+}
+
+.button--orange {
+  background-color: #ffb100;
+}
+
+.button--orange:hover {
+  background-color: #fbc252;
+}
+
+.button--zero {
+  grid-row: 5 / 6;
+  grid-column: 1/3;
+}
