Add styles for home component.

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,18 @@
   color: #df4230;
 }
 
+.home__title {
+  font-size: 2rem;
+  padding: 2rem 0;
+  color: #1b3559;
+}
+
+.home__description p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
 .calculator {
   position: absolute;
   top: 50%;
