--- a/src/App.css
+++ b/src/App.css
@@ -68,13 +68,22 @@
   line-height: 1.5;
   margin-bottom: 1rem;
 }
-
 .calculator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 2rem 0;
+}
+
+.calculator__title {
+  font-size: 2rem;
+  color: #1b3559;
+  width: 30%;
+}
+
+.calculator__container {
+  width: 70%;
 }
 
 .display {
