--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   line-height: 1.5;
   margin-bottom: 1rem;
 }
+
 .calculator {
   justify-content: space-between;
   width: 100%;
@@ -132,4 +133,15 @@ button:hover {
 .button--zero {
   grid-row: 5 / 6;
   grid-column: 1/3;
+}
+
+.quote {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-size: 2.5rem;
+  line-height: 1.5;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
